// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails rendering render with error Props 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="tasks-table-error"
  msg="Could not receive data: some-error"
/>
`;

exports[`TaskDetails rendering render with loading Props 1`] = `
<div
  className="task-details-react well"
>
  <ForwardRef
    animation={false}
    defaultActiveKey={1}
    id="task-details-tabs"
  >
    <Tab
      eventKey={1}
      title="Task"
    >
      <TaskSkeleton />
    </Tab>
    <Tab
      disabled={true}
      eventKey={2}
      title="Running Steps"
    >
      <RunningSteps
        cancelStep={[MockFunction]}
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        runningSteps={Array []}
        taskProgressToggle={[Function]}
        taskReload={false}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={3}
      title="Errors"
    >
      <Errors
        executionPlan={Object {}}
        failedSteps={Array []}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={4}
      title="Locks"
    >
      <Locks
        locks={Array []}
      />
    </Tab>
    <Tab
      disabled={true}
      eventKey={5}
      title="Raw"
    >
      <Raw
        endedAt=""
        externalId=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        output={Object {}}
        startedAt=""
      />
    </Tab>
  </ForwardRef>
</div>
`;

exports[`TaskDetails rendering render with min Props 1`] = `
<div
  className="task-details-react well"
>
  <ForwardRef
    animation={false}
    defaultActiveKey={1}
    id="task-details-tabs"
  >
    <Tab
      eventKey={1}
      title="Task"
    >
      <Task
        APIerror={null}
        action=""
        canEdit={false}
        cancelStep={[MockFunction]}
        cancelTaskRequest={[Function]}
        cancellable={false}
        dynflowEnableConsole={false}
        endedAt=""
        errors={Array []}
        executionPlan={Object {}}
        externalId=""
        failedSteps={Array []}
        fetchTaskDetails={
          [MockFunction] {
            "calls": Array [
              Array [
                "a15dd820-32f1-4ced-9ab7-c0fab8234c47",
                undefined,
                [MockFunction],
              ],
              Array [
                "a15dd820-32f1-4ced-9ab7-c0fab8234c47",
                undefined,
                [MockFunction],
              ],
              Array [
                "a15dd820-32f1-4ced-9ab7-c0fab8234c47",
                undefined,
                [MockFunction],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        hasSubTasks={false}
        help=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        locks={Array []}
        output={Object {}}
        parentTask=""
        progress={0}
        refetchTaskDetails={[MockFunction]}
        result="error"
        resumable={false}
        resumeTaskRequest={[Function]}
        runningSteps={Array []}
        startAt=""
        startBefore=""
        startedAt=""
        state=""
        status="RESOLVED"
        taskProgressToggle={[Function]}
        taskReload={false}
        taskReloadStart={[MockFunction]}
        taskReloadStop={[MockFunction]}
        username=""
        usernamePath=""
      />
    </Tab>
    <Tab
      disabled={false}
      eventKey={2}
      title="Running Steps"
    >
      <RunningSteps
        cancelStep={[MockFunction]}
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        runningSteps={Array []}
        taskProgressToggle={[Function]}
        taskReload={false}
      />
    </Tab>
    <Tab
      disabled={false}
      eventKey={3}
      title="Errors"
    >
      <Errors
        executionPlan={Object {}}
        failedSteps={Array []}
      />
    </Tab>
    <Tab
      disabled={false}
      eventKey={4}
      title="Locks"
    >
      <Locks
        locks={Array []}
      />
    </Tab>
    <Tab
      disabled={false}
      eventKey={5}
      title="Raw"
    >
      <Raw
        endedAt=""
        externalId=""
        id="a15dd820-32f1-4ced-9ab7-c0fab8234c47"
        input={Array []}
        label=""
        output={Object {}}
        startedAt=""
      />
    </Tab>
  </ForwardRef>
</div>
`;
